--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -16,7 +16,7 @@
   transition: all 0.3s;
   border: none;
   height: 110px;
-  margin:20px;
+  margin: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,16 +46,15 @@
   margin-bottom: 20px;
   margin-top: 40px;
   padding-top: 10px;
-
 }
 
-.bottomBar{
+.bottomBar {
   width: 160px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.bottomBar .footer_btn{
+.bottomBar .footer_btn {
   background: #4f4f4f;
   color: #fff;
   padding: 5px;
@@ -71,23 +70,22 @@
   background-color: #5f5f5f;
 }
 .loginCard {
-  margin:auto;
+  margin: auto;
   max-width: 480px !important;
   width: 480px;
-  background:black;
+  background: black;
 }
 .loginCard img {
   width: 140px;
-  margin:auto;
- 
+  margin: auto;
 }
 
 .order_card {
   width: 200px;
-    padding: 10px;
-   background: #81ecec;
-   margin-bottom: 18px;
-   cursor: pointer;
+  padding: 10px;
+  background: #81ecec;
+  margin-bottom: 18px;
+  cursor: pointer;
 }
 
 .order_card p {
@@ -97,7 +95,7 @@
   font-weight: 600;
 }
 
-.order_card .client_name{
+.order_card .client_name {
   font-size: 12px;
   position: absolute;
   top: -13px;
@@ -105,10 +103,10 @@
   background: white;
   padding: 2px;
   border-radius: 5px;
-  border: 1px solid rgba(0,0,0,.125);
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.order_card .order_time{
+.order_card .order_time {
   font-size: 8px;
   position: absolute;
   bottom: 4px;
@@ -128,7 +126,7 @@
   max-width: 300px;
 }
 
-.orderListContainer h5{
+.orderListContainer h5 {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-bottom: solid 0.5px #4f4f4f;
@@ -139,7 +137,6 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 13px;
-
 }
 
 .orderRowsContainer {
@@ -149,21 +146,21 @@
 }
 
 .button {
-  border:none !important;
-  background:#4f4f4f !important;
+  border: none !important;
+  background: #4f4f4f !important;
 }
 
 .link {
   text-decoration: none !important;
   cursor: pointer !important;
-  color: #4f4f4f ;
+  color: #4f4f4f;
 }
 
 .orderRow_btnContainer {
   margin-left: 15px;
 }
 
-.orderRow_btnContainer>button {
+.orderRow_btnContainer > button {
   margin-bottom: 15px;
 }
 
@@ -198,14 +195,14 @@
   border-radius: 5px;
 }
 
-.appOnlineStatusBtn div{
+.appOnlineStatusBtn div {
   width: 12px;
   height: 12px;
   background: #55efc4;
   border-radius: 50px;
   margin-left: 15px;
 }
-.appOffileStatusBtn div{
+.appOffileStatusBtn div {
   width: 12px;
   height: 12px;
   background: #b2bec3;
@@ -216,7 +213,7 @@
 .workerPanelHeaderBtnContainer {
   display: flex;
 }
-.workerPanelHeaderBtnContainerLogoutBtn{
+.workerPanelHeaderBtnContainerLogoutBtn {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -246,7 +243,7 @@
 
 .portalStatusText {
   display: flex;
-    align-items: center;
+  align-items: center;
 }
 
 .orderListInnerContainer {
@@ -257,25 +254,39 @@
 }
 
 .loaderContainer {
-    height: 100vh;
-    background-color: black;
-    /* background-image: url("https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Circle-Simple-Background-Image-1.jpg"); */
-    background-size: cover;
+  height: 100vh;
+  background-color: black;
+  /* background-image: url("https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Circle-Simple-Background-Image-1.jpg"); */
+  background-size: cover;
+}
+
+.dashboardContainer {
+  width: 100%;
+  height: 100vh;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.dashboardContainer>img {
+  width: 250px;
+  margin-bottom: 50px;
 }
 
 .loaderInnerContainer {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #4f4f4f;
-      backdrop-filter: blur(12px);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #4f4f4f;
+  backdrop-filter: blur(12px);
 }
 
-
 .overlay_container img {
-    animation: bounce 1s infinite alternate;
-    -webkit-animation: bounce 1s infinite alternate;
+  animation: bounce 1s infinite alternate;
+  -webkit-animation: bounce 1s infinite alternate;
 }
 
 @keyframes bounce {
@@ -292,5 +303,26 @@
   }
   to {
     transform: translateY(-15px);
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .card {
+    height: 56px;
+    margin: 8px;
+  }
+  .dashboardContainer>img {
+    width: 200px;
+    margin-top: 29px;
+    margin-bottom: 0px;
+  }
+  .footer {
+    margin-bottom: 0px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 18px;
+    backdrop-filter: blur(5px);
   }
 }
