--- a/src/Pages/Dashboard/styles.module.scss
+++ b/src/Pages/Dashboard/styles.module.scss
@@ -37,6 +37,23 @@
 
   .dashboard_inner_container {
     color: #fff;
+    .subHeader {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 15px;
+      button {
+        background: none !important;
+        border: solid;
+        &:hover {
+          background-color: rgb(23, 162, 184) !important;
+          color: #fff;
+          border-color: rgb(23, 162, 184);
+        }
+      }
+      p {
+        margin: 0;
+      }
+    }
 
     .order_cards_container {
       margin-top: 50px;
@@ -102,6 +119,15 @@
   .dashboard_container {
     height: 100%;
     .dashboard_inner_container {
+      .subHeader {
+        flex-direction: column;
+        align-items: center;
+        height: 80px;
+        margin-bottom: 24px;
+        button {
+          background-color: none;
+        }
+      }
       h3 {
         font-size: 1.5rem;
       }
@@ -122,6 +148,68 @@
       img {
         margin-top: 20px;
       }
+    }
+  }
+}
+
+.orderStatusCard {
+  backdrop-filter: blur(12px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  position: absolute;
+  width: 100%;
+  z-index: 100;
+  height: 100%;
+  h3 {
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 20px;
+    width: 300px;
+    text-align: center;
+    border-bottom: solid 2px #fff;
+  }
+  h4 {
+    color: #fff;
+    font-weight: 900;
+    transform: scaleX(1.3);
+    margin-top: 40px;
+    cursor: pointer;
+    transition: 0.3s all ease;
+    &:hover {
+      transform: scaleX(3) scaleY(2);
+    }
+  }
+  .orders_list {
+    .list_item {
+      background-color: #fff;
+      margin-bottom: 5px;
+      cursor: pointer;
+      display: flex;
+      border-radius: 20px;
+      transition: 0.3s all ease;
+      justify-content: space-around;
+      width: 300px;
+      border: solid 1px gray;
+      align-items: center;
+      padding: 10px;
+      font-weight: 600;
+      box-shadow: 0px 7px 25px rgba(#8c8c8c, 0.2);
+      &:hover {
+        box-shadow: 0px 7px 15px #8c8c8c;
+        img {
+          transform: scale(1.45);
+        }
+      }
+      p {
+        margin: 0;
+      }
+    }
+    .list_item_prepare {
+      background-color: rgb(255, 145, 0) !important;
+      color: #fff !important;
     }
   }
 }
